Adding the `ssl` module

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<modules>
 		<module>gateway</module>
 		<module>callme</module>
+        <module>ssl</module>
 	</modules>
 	<packaging>pom</packaging>
 
