--- a/ssl/secure-callme/src/main/resources/application.yml
+++ b/ssl/secure-callme/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server.port: 8443
 server.ssl:
   enabled: true
-  key-store: /opt/secret/keystore.jks
+  key-store: ${CERT_PATH}/keystore.jks
   key-store-password: ${PASSWORD}
-  trust-store: /opt/secret/truststore.jks
+  trust-store: ${CERT_PATH}/truststore.jks
   trust-store-password: ${PASSWORD}
   client-auth: NEED
