--- a/ssl/secure-caller/src/main/resources/application.yml
+++ b/ssl/secure-caller/src/main/resources/application.yml
@@ -7,6 +7,7 @@ server.ssl:
   trust-store-password: ${PASSWORD}
   client-auth: NEED
 
+client.url: https://${HOST}:8443/callme
 client.ssl:
   key-store: ${CLIENT_CERT_PATH}/keystore.jks
   key-store-password: ${PASSWORD}
