--- a/ssl/secure-caller/pom.xml
+++ b/ssl/secure-caller/pom.xml
@@ -38,6 +38,11 @@
                     </profiles>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
         </plugins>
     </build>
 
