--- a/ssl/secure-callme-bundle/skaffold.yaml
+++ b/ssl/secure-callme-bundle/skaffold.yaml
@@ -3,4 +3,6 @@ kind: Config
 build:
   artifacts:
     - image: piomin/secure-callme-bundle
-      jib: {}
+      jib:
+        args:
+          - -DskipTests
