--- a/ssl/secure-callme-bundle/src/main/resources/application.yml
+++ b/ssl/secure-callme-bundle/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 server.port: 8443
+server.ssl.client-auth: NEED
 server.ssl.bundle: server
 spring.profiles.active: dev
 
@@ -6,15 +7,25 @@ spring.profiles.active: dev
 spring.config.activate.on-profile: dev
 spring.ssl.bundle.jks:
   server:
+    reload-on-update: true
     keystore:
       location: classpath:keystore.jks
+      password: 123456
+      type: JKS
+    truststore:
+      location: classpath:truststore.jks
       password: 123456
       type: JKS
 ---
 spring.config.activate.on-profile: prod
 spring.ssl.bundle.jks:
   server:
+    reload-on-update: true
     keystore:
       location: ${CERT_PATH}/keystore.jks
+      password: ${PASSWORD}
+      type: JKS
+    truststore:
+      location: ${CERT_PATH}/truststore.jks
       password: ${PASSWORD}
       type: JKS
