--- a/ssl/secure-caller-bundle/src/main/resources/application.yml
+++ b/ssl/secure-caller-bundle/src/main/resources/application.yml
@@ -31,7 +31,11 @@ spring.ssl.bundle.jks:
       type: JKS
   client:
     reload-on-update: true
-    truststore:
+    keystore:
       location: ${CLIENT_CERT_PATH}/keystore.jks
+      password: ${PASSWORD}
+      type: JKS
+    truststore:
+      location: ${CLIENT_CERT_PATH}/truststore.jks
       password: ${PASSWORD}
       type: JKS
