--- a/ssl/secure-callme-bundle/k8s/deployment.yaml
+++ b/ssl/secure-callme-bundle/k8s/deployment.yaml
@@ -2,8 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: secure-callme-bundle
-  annotations:
-    secret.reloader.stakater.com/reload: "secure-callme-cert"
 spec:
   selector:
     matchLabels:
@@ -42,7 +40,7 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/name: secure-callme-bundle
-  name: secure-callme
+  name: secure-callme-bundle
 spec:
   ports:
     - name: https
