fix errors + README.md update

--- a/callme/pom.xml
+++ b/callme/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
     </properties>
 
     <dependencies>
