--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,14 @@
         <sonar.projectKey>piomin_sample-spring-security-microservices</sonar.projectKey>
         <sonar.organization>piomin</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <java.version>17</java.version>
+        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
     </properties>
 
     <modules>
         <module>gateway</module>
         <module>callme</module>
         <module>ssl</module>
-        <module>ssl/secure-callme-bundle</module>
-        <module>ssl/secure-caller-bundle</module>
     </modules>
 
 </project>
