--- a/ssl/pom.xml
+++ b/ssl/pom.xml
@@ -11,9 +11,16 @@
 
     <artifactId>ssl</artifactId>
     <packaging>pom</packaging>
+
+    <properties>
+        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
+    </properties>
+
     <modules>
         <module>secure-caller</module>
         <module>secure-callme</module>
+        <module>secure-callme-bundle</module>
+        <module>secure-caller-bundle</module>
     </modules>
 
 </project>
