--- a/ssl/secure-caller-bundle/pom.xml
+++ b/ssl/secure-caller-bundle/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
     </properties>
 
     <dependencies>
