--- a/ssl/secure-caller/pom.xml
+++ b/ssl/secure-caller/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
     </properties>
 
     <dependencies>
