--- a/oauth/callme/pom.xml
+++ b/oauth/callme/pom.xml
@@ -4,16 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>pl.piomin.services</groupId>
-        <artifactId>sample-spring-security-microservices</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>oauth</artifactId>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>callme</artifactId>
 
     <properties>
-        <java.version>11</java.version>
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
         <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
     </properties>
 
