--- a/ssl/secure-caller/pom.xml
+++ b/ssl/secure-caller/pom.xml
@@ -3,17 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.3</version>
-        <relativePath/>
+        <groupId>pl.piomin.services</groupId>
+        <artifactId>ssl</artifactId>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>secure-caller</artifactId>
 
     <properties>
-        <java.version>17</java.version>
         <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
     </properties>
 
