--- a/ssl/secure-callme-bundle/pom.xml
+++ b/ssl/secure-callme-bundle/pom.xml
@@ -4,17 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.3</version>
-        <relativePath/>
+        <groupId>pl.piomin.services</groupId>
+        <artifactId>ssl</artifactId>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>pl.piomin</groupId>
     <artifactId>secure-callme-bundle</artifactId>
 
     <properties>
-        <java.version>17</java.version>
         <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
     </properties>
 
