add oauth tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,36 @@
-version: 2.1
+version: '2.1'
 
 jobs:
-  build:
+  analyze:
     docker:
-      - image: 'cimg/openjdk:17.0.10'
+      - image: 'cimg/openjdk:21.0.2'
     steps:
       - checkout
       - run:
           name: Analyze on SonarCloud
-          command: mvn verify sonar:sonar
-
-executors:
-  j17:
-    docker:
-      - image: 'cimg/openjdk:17.0.10'
+          command: mvn verify sonar:sonar -DskipTests
+  test:
+    executor: machine_executor_amd64
+    steps:
+      - checkout
+      - run:
+          name: Maven Tests
+          command: mvn test
 
 orbs:
   maven: circleci/maven@1.4.1
 
+executors:
+  machine_executor_amd64:
+    machine:
+      image: ubuntu-2204:2023.10.1
+    environment:
+      architecture: "amd64"
+      platform: "linux/amd64"
+
 workflows:
   maven_test:
     jobs:
-      - maven/test:
-          executor: j17
-      - build:
+      - test
+      - analyze:
           context: SonarCloud
