--- a/oauth/gateway/src/main/resources/application.yml
+++ b/oauth/gateway/src/main/resources/application.yml
@@ -7,33 +7,35 @@ spring:
         - TokenRelay
       routes:
         - id: callme-service
-          uri: http://127.0.0.1:8040
+          uri: http://localhost:8040
           predicates:
             - Path=/callme/**
-          filters:
-            - RemoveRequestHeader=Cookie
+#          filters:
+#            - RemoveRequestHeader=Cookie
   security:
     oauth2:
       client:
         provider:
           keycloak:
-            token-uri: http://localhost:8080/auth/realms/master/protocol/openid-connect/token
-            authorization-uri: http://localhost:8080/auth/realms/master/protocol/openid-connect/auth
-            userinfo-uri: http://localhost:8080/auth/realms/master/protocol/openid-connect/userinfo
-            user-name-attribute: preferred_username
+#            token-uri: http://localhost:8080/realms/demo/protocol/openid-connect/token
+#            authorization-uri: http://localhost:8080/realms/demo/protocol/openid-connect/auth
+#            userinfo-uri: http://localhost:8080/realms/demo/protocol/openid-connect/userinfo
+#            user-name-attribute: preferred_username
+            issuer-uri: http://localhost:8080/realms/demo
         registration:
           keycloak-with-test-scope:
             provider: keycloak
             client-id: spring-with-test-scope
-            client-secret: c6480137-1526-4c3e-aed3-295aabcb7609
+            client-secret: IWLSnakHG8aNTWNaWuSj0a11UY4lzxd9
             authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"
-          keycloak-without-test-scope:
-            provider: keycloak
-            client-id: spring-without-test-scope
-            client-secret: f6fc369d-49ce-4132-8282-5b5d413eba23
-            authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"
+#            redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"
+            scope: openid
+#          keycloak-without-test-scope:
+#            provider: keycloak
+#            client-id: spring-without-test-scope
+#            client-secret: f6fc369d-49ce-4132-8282-5b5d413eba23
+#            authorization-grant-type: authorization_code
+#            redirect-uri: "{baseUrl}/login/oauth2/code/spring-without-test-scope"
 
 server.port: 8060
 
