--- a/ssl/secure-caller-bundle/src/main/resources/application.yml
+++ b/ssl/secure-caller-bundle/src/main/resources/application.yml
@@ -26,20 +26,11 @@ spring.ssl.bundle.jks:
 ---
 spring.config.activate.on-profile: prod
 client.url: https://${HOST}:8443/callme
-spring.ssl.bundle.jks:
+spring.ssl.bundle.pem:
   server:
-    reload-on-update: true
     keystore:
-      location: ${CERT_PATH}/keystore.jks
-      password: ${PASSWORD}
-      type: JKS
+      certificate: ${CERT_PATH}/tls.crt
+      private-key: ${CERT_PATH}/tls.key
   client:
-    reload-on-update: true
-    keystore:
-      location: ${CLIENT_CERT_PATH}/keystore.jks
-      password: ${PASSWORD}
-      type: JKS
     truststore:
-      location: ${CLIENT_CERT_PATH}/truststore.jks
-      password: ${PASSWORD}
-      type: JKS
+      certificate: ${CLIENT_CERT_PATH}/service-ca.crt
