--- a/ssl/secure-callme-bundle/pom.xml
+++ b/ssl/secure-callme-bundle/pom.xml
@@ -37,6 +37,11 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>3.4.0</version>
+                <configuration>
+                    <from>
+                        <image>registry.access.redhat.com/ubi8/openjdk-17:latest</image>
+                    </from>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
