--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -14,7 +14,6 @@
     <packaging>pom</packaging>
 
     <properties>
-<!--        <opensaml.version>4.1.1</opensaml.version>-->
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -27,7 +26,7 @@
 
     <repositories>
         <repository>
-            <id>shib-build-releases</id>
+            <id>shibboleth-build-releases</id>
             <name>Shibboleth Build Releases Repository</name>
             <url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
         </repository>
