--- a/saml/callme-saml/pom.xml
+++ b/saml/callme-saml/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>callme-saml</artifactId>
 
+    <properties>
+        <java.version>21</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
