--- a/oauth/callme/pom.xml
+++ b/oauth/callme/pom.xml
@@ -34,6 +34,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
@@ -83,7 +87,7 @@
                         <configuration>
                             <image>
                                 <builder>paketobuildpacks/builder-jammy-base:latest</builder>
-                                <name>sample-spring-security-microservices/${project.artifactId}:${project.version}</name>
+                                <name>piomin/${project.artifactId}:oauth-1.0</name>
                             </image>
                         </configuration>
                         <executions>
